--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,11 +1,13 @@
 #Minecraft server properties
-#Sat Apr 12 20:40:52 UTC 2025
+#Sat Apr 12 20:52:41 UTC 2025
+spawn-protection=16
 max-tick-time=60000
 generator-settings=
 force-gamemode=false
 allow-nether=true
 gamemode=0
 dc_preset=notSet
+broadcast-console-to-ops=true
 enable-query=false
 player-idle-timeout=0
 difficulty=1
